--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "k": "^1.1.5",
     "mammoth": "^1.9.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
